# ai-agent-tracks-instruqt

./: .gitignore  README.md
MAF/PrDigest/: .gitignore  PrDigest.http  RUNBOOK.md  toggle-host.sh
MAF/PrDigest/PrDigest.ApiService/: PrDigest.ApiService.csproj  (+2 more)
PrDigest/: PrDigest.sln  RUNBOOK.md  aspire.config.json
PrDigest/PrDigest.ApiService/: PrDigest.ApiService.csproj  Program.cs
PrDigest/PrDigest.AppHost/: AppHost.cs  PrDigest.AppHost.csproj
PrDigest/PrDigest.Tests/: PrMetricsTests.cs  PrToolsTests.cs
deepagents/deep-investigation/: README.md  github_data.py  investigate-baseline.py  investigate-crash.py  investigate-durable.py  investigate.py  pyproject.toml  tools.py  tools_crash.py
deepagents/deep-investigation/data/dapr/dapr/: manifest.json
deepagents/deep-investigation/data/dapr/dapr/issues/: 10173.json  10185.json  10186.json  10191.json  10203.json  7326.json  8236.json  9056.json
deepagents/deep-investigation/data/dapr/dapr/prs/: 10175.json  10190.json  10197.json  10198.json  10202.json  10205.json  10207.json  8330.json  8997.json  9605.json  9735.json  9736.json
deepagents/deep-investigation/resources/: statestore.yaml
deepagents/deep-investigation/resources-local-test/: statestore.yaml
deepagents/deep-investigation/track-data-real/dapr/dapr/: manifest.json
deepagents/deep-investigation/track-data-real/dapr/dapr/issues/: 1.json  10135.json  10140.json  10144.json  1294.json  1833.json  2.json  26.json
deepagents/deep-investigation/track-data-real/dapr/dapr/prs/: 10141.json  10142.json  10145.json  10146.json  10147.json  1839.json
(+61 files in other folders)
