# Copyright 2026 The Dapr Authors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "deepagents-issue-investigator"
version = "0.1.0"
description = "Deep investigation of a GitHub issue, backed by Dapr for durable execution."
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "diagrid[deepagents]",
    "langchain-openai>=1.2.1",
    "python-dotenv",
]
