[project]
name = "deepagents-issue-investigator"
version = "0.1.0"
description = "Deep investigation of a GitHub issue, backed by Dapr for durable execution."
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "diagrid[deepagents]",
    "langchain-openai>=1.2.1",
    "python-dotenv",
]
